--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,11 @@
 version: '3.6'
-# Deploys MongoDB with customization scripts and container with Mongo client
-# https://fabianlee.org/2018/05/20/docker-using-docker-compose-to-link-a-mongodb-server-and-client/
-#
-# usage:
-# sudo docker-compose build
-# sudo docker-compose up
-
 
 services:
-  my-mongodb:
+  mongodb:
     image: mongo:4.2.3-bionic
-    container_name: my-mongodb
+    container_name: sp-mongodb
     ports:
-      - 27017:27017
+      - 27018:27017
     environment:
       - MONGO_INITDB_DATABASE=test
       - MONGO_INITDB_ROOT_USERNAME=admin
@@ -24,28 +17,34 @@ services:
       - mongodb:/data/db
       - mongoconfig:/data/configdb
     networks:
-      - mongo_net
+      - sp
 
-  my-mongoclient:
-    # build will get tagged with 'image'
-    build: ./my-mongoclient
-    image: fabianlee/my-mongoclient:3.9
-    container_name: my-mongoclient
-    environment:
-      - MONGO_SERVER=my-mongodb
-      - MONGO_INITDB_DATABASE=test
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
-    networks:
-      - mongo_net
+  api:
+    build: ./api
+    container_name: sp-api
     depends_on:
-      - my-mongodb
-    
+      - mongodb
+    volumes:
+      - ./api:/usr/src/app
+    networks:
+      - sp
+
+  web:
+    build: ./web
+    container_name: sp-web
+    ports:
+        - 80:8080
+    depends_on:
+      - api
+    volumes:
+      - ./web:/usr/src/app
+    networks:
+      - sp
+
 volumes:
-  # default dir on Ubuntu: /var/lib/docker/volumes
   mongodb:
   mongoconfig:
 
 networks:
-  mongo_net:
+  sp:
     driver: bridge
