--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -8,10 +8,10 @@ WORKDIR /usr/src/app
 # where available (npm@5+)
 COPY package*.json ./
 
-RUN yarn install --production
+RUN yarn
 # If you are building your code for production
 # RUN npm ci --only=production
-
+COPY . .
 # Bundle app source
 RUN yarn build
 
