--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^9.9.0",
+    "typescript": "^5.0.2",
     "xxxxx": "^1.0.3"
   },
   "scripts": {
