--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "geoip-lite": "^1.4.2",
     "helmet": "^4.4.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "i": "^0.3.7",
     "joi": "^17.4.0",
     "joi-objectid": "^3.0.1",
