--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "geoip-lite": "^1.4.2",
     "helmet": "^4.4.1",
     "http": "^0.0.1-security",
@@ -29,11 +30,14 @@
     "nodemon": "^2.0.20",
     "npm": "^7.6.0",
     "prettier": "^2.8.3",
+    "query-string": "^8.1.0",
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
+    "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
