--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "You can use this template when you're starting a new project. It contains general concepts, you can customize it according to your needs.",
   "main": "app.js",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@slack/webhook": "^6.1.0",
     "aws-sdk": "^2.855.0",
