feat(optimize-image): Optimize image upload

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 0.0.0.0:80;
-    server_name kpmquockhanh.site;
+    server_name api.kpmquockhanh.site;
 
     location / {
       proxy_set_header X-Real-IP $remote_addr;
@@ -10,15 +10,22 @@ server {
 
       proxy_pass http://127.0.0.1:3000/;
       proxy_redirect off;
+
+
+      proxy_set_header   X-Forwarded-For $remote_addr;
+      proxy_set_header   Host $http_host;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection "upgrade";
+      proxy_pass http://127.0.0.1:3000/;
+      proxy_http_version 1.1;
     }
  }
 
 server {
     listen 443 ssl;
     server_name example.com;  # Replace with your domain
-
-    ssl_certificate /home/kpmquockhanh/shopee-tool/cert.pem;  # Replace with the path to your SSL certificate
-    ssl_certificate_key /home/kpmquockhanh/shopee-tool/key.pem;  # Replace with the path to your SSL private key
+    ssl_certificate /etc/letsencrypt/live/kpmquockhanh.site/fullchain.pem;  # Replace with the path to your SSL certificate
+    ssl_certificate_key /etc/letsencrypt/live/kpmquockhanh.site/privkey.pem;  # Replace with the path to your SSL private key
 
     location / {
         proxy_pass http://127.0.0.1:3000;
