--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "query-string": "^8.1.0",
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
+    "sharp": "^0.33.3",
     "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
