--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "shopee-tool-api",
+  "name": "multiple-tool-api",
   "version": "1.0.0",
-  "description": "You can use this template when you're starting a new project. It contains general concepts, you can customize it according to your needs.",
+  "description": "Individual project.",
   "main": "app.js",
   "engines": {
     "node": "20.x"
   },
   "dependencies": {
     "@slack/webhook": "^6.1.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "aws-sdk": "^2.855.0",
-    "axios": "^1.2.1",
+    "axios": "1.6.0",
     "backblaze-b2": "^1.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -24,6 +25,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "i": "^0.3.7",
+    "image-js": "^0.35.5",
     "joi": "^17.4.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +33,8 @@
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nan": "2.18.0",
+    "node-gyp": "10.0.1",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.20",
     "npm": "^7.6.0",
@@ -38,7 +42,7 @@
     "query-string": "^8.1.0",
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
@@ -63,16 +67,12 @@
     "url": "git+https://github.com/bahricanyesil/nodejs-starter-template.git"
   },
   "keywords": [
-    "node.js",
-    "boilerplate",
-    "starter",
-    "template"
+    "node.js"
   ],
-  "author": "Bahrican Yesil",
+  "author": "kpmquockhanh",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bahricanyesil/nodejs-starter-template/issues"
-  },
-  "homepage": "https://github.com/bahricanyesil/nodejs-starter-template#readme",
-  "type": "module"
+  "type": "module",
+  "resolutions": {
+    "nan": "2.18.0"
+  }
 }
