--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,22 @@ services:
     networks:
       - sp
 
+  rabbitmq:
+    image: rabbitmq:3.8-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+      - rabbitmq_logs:/var/log/rabbitmq
+    networks:
+      - sp
+
 volumes:
   mongodb:
   mongoconfig:
+  rabbitmq_data:
+  rabbitmq_logs:
 
 networks:
   sp:
