--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "engines": {
     "node": "20.x"
   },
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon",
+    "worker": "node src/worker/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@slack/webhook": "^6.1.0",
     "@tensorflow/tfjs-node": "^4.20.0",
@@ -57,11 +63,6 @@
     "eslint-plugin-vue": "^9.9.0",
     "typescript": "^5.0.2",
     "xxxxx": "^1.0.3"
-  },
-  "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
