--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "geoip-lite": "^1.4.2",
+    "google-auth-library": "^9.13.0",
+    "googleapis": "^140.0.1",
     "helmet": "^4.4.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
