--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.6'
 
 services:
+#  worker:
+#    image: node:20.11.0-alpine
+#    container_name: sp-worker
+#    volumes:
+#      - .:/app
+#    ports:
+#      - "8000:8000"
+#    networks:
+#      - sp
+
   mongodb:
     image: mongo:4.2.3-bionic
     container_name: sp-mongodb
