--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
